force-app/main/default/objects/cwbtool__Connection__c/cwbtool__Connection__c.object-meta.xml
<CustomObject>
    <label>Connection</label>
    <nameField>
        <displayFormat>CON-{000000}</displayFormat>
        <label>Connection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Connections</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>