force-app/main/default/objects/cwbtool__Connection__c/fields/cwbtool__Current_Org__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Current_Org__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Org</label>
    <type>Checkbox</type>
</CustomField>