force-app/main/default/objects/cwbtool__Connection__c/fields/cwbtool__Enviroment__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Enviroment__c</fullName>
    <label>Enviroment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Sandbox</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>