force-app/main/default/objects/cwbtool__Connection__c/fields/cwbtool__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Is_Active__c</fullName>
    <formula>if(( Now()-  LastModifiedDate ) * 24 * 60 * 60
+ ( VALUE(MID(TEXT(Now()),18,2)) - VALUE(MID(TEXT(LastModifiedDate ),18,2)) )&lt; cwbtool__Valid_Second__c,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>